<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Portugol Online</string>
    <string name="action_aumentar_fonte">Aumentar fonte</string>
    <string name="action_desfazer">Desfazer</string>
    <string name="action_diminuir_fonte">Diminuir fonte</string>
    <string name="action_executar">Executar</string>
    <string name="action_localizar_substituir">Localizar/substituir</string>
    <string name="action_localizar_substituir_anterior">Anterior</string>
    <string name="action_localizar_substituir_cancelar">Cancelar</string>
    <string name="action_localizar_substituir_proximo">Próximo</string>
    <string name="action_localizar_substituir_substituir">Substituir</string>
    <string name="action_localizar_substituir_substituir_tudo">Substituir tudo</string>
    <string name="action_refazer">Refazer</string>
    <string name="action_salvar">Salvar</string>
    <string name="action_selecao_colar">Colar</string>
    <string name="action_selecao_compartilhar">Compartilhar</string>
    <string name="action_selecao_copiar">Copiar</string>
    <string name="action_selecao_recortar">Recortar</string>
    <string name="action_selecao_selecionar_tudo">Selecionar tudo</string>
    <string name="ao_nao_encontrar">Sua pesquisa &lt;b>%1$s&lt;/b> não foi encontrada.</string>
    <string name="armazenamento_interno">Armazenamento interno</string>
    <string name="atividade_abrir_exemplo">Abrir exemplo</string>
    <string name="dialog_localizar_substituir_titulo">Localizar/substituir</string>
    <string name="dialog_localizar_substituir_button_cancelar">Cancelar</string>
    <string name="dialog_localizar_substituir_button_localizar">Localizar</string>
    <string name="dialog_localizar_substituir_checkbox_diferenciar">Diferenciar maiúsculas de minúsculas</string>
    <string name="dialog_localizar_substituir_checkbox_substituir">Substituir</string>
    <string name="dialog_localizar_substituir_edit_text_localizar">Localizar</string>
    <string name="dialog_localizar_substituir_edit_text_substituir_por">Substituir por</string>
    <string name="compartilhar_como_arquivo">Compartilhar algoritmo como arquivo</string>
    <string name="compartilhar_como_texto">Compartilhar algoritmo como texto</string>
    <string name="compartilhar_dialogo_titulo">Compartilhar como</string>
    <string name="compartilhar_dialogo_opcao_arquivo">Arquivo</string>
    <string name="compartilhar_dialogo_opcao_texto">Texto</string>
    <string name="compartilhar_titulo">Meu algoritmo em Portugol</string>
    <string name="nav_drawer_abrir">Abrir navegação</string>
    <string name="nav_drawer_abrir_arquivo">Abrir arquivo</string>
    <string name="nav_drawer_abrir_exemplo">Abrir exemplo</string>
    <string name="nav_drawer_compartilhar">Compartilhar</string>
    <string name="nav_drawer_fechar">Fechar navegação</string>
    <string name="nav_drawer_novo">Novo</string>
    <string name="nav_drawer_salvar">Salvar</string>
    <string name="nav_drawer_salvar_como">Salvar como</string>
    <string name="nav_header_modificado">modificado</string>
    <string name="salvar_descartar_dialogo_mensagem">O arquivo &lt;b>%1$s&lt;/b> foi modificado.\n\nDeseja salvar as alterações ou descartá-las?</string>
    <string name="salvar_descartar_dialogo_titulo">Salvar ou descartar alterações</string>
    <string name="salvar_descartar_dialogo_opcao_cancelar">Cancelar</string>
    <string name="salvar_descartar_dialogo_opcao_descartar">Descartar</string>
    <string name="salvar_descartar_dialogo_opcao_salvar">Salvar</string>
    <string name="sd_card">Cartão SD</string>
    <string name="vazia" />
</resources>
