<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <item
        android:id="@+id/nav_drawer_novo"
        android:icon="@drawable/ic_insert_drive_file_black_48dp"
        android:title="@string/nav_drawer_novo" />
    <item
        android:id="@+id/nav_drawer_salvar"
        android:icon="@drawable/ic_save_black_48dp"
        android:title="@string/nav_drawer_salvar" />
    <item
        android:id="@+id/nav_drawer_salvar_como"
        android:icon="@drawable/ic_save_black_48dp"
        android:title="@string/nav_drawer_salvar_como" />
    <item
        android:id="@+id/nav_drawer_abrir_arquivo"
        android:icon="@drawable/ic_folder_open_black_48dp"
        android:title="@string/nav_drawer_abrir_arquivo" />
    <item
        android:id="@+id/nav_drawer_abrir_exemplo"
        android:icon="@drawable/ic_folder_open_black_48dp"
        android:title="@string/nav_drawer_abrir_exemplo" />
    <item
        android:id="@+id/nav_drawer_compartilhar"
        android:icon="@drawable/ic_share_black_48dp"
        android:title="@string/nav_drawer_compartilhar" />
</menu>